bugs.txt
In file included from C:/mingw64/include/c++/15.1.0/bits/std_thread.h:45,
                 from C:/mingw64/include/c++/15.1.0/thread:47,
                 from os_interface.cpp:8,
                 from main.cpp:1:
C:/mingw64/include/c++/15.1.0/bits/unique_ptr.h: In instantiation of 'std::__detail::__unique_ptr_t<_Tp> std:make_unique(_Args&& ...) [with _Tp = Process; _Args = {int&, __cxx11::basic_string<char, char_traits<char>, allocator<char> >&}; __detail::__unique_ptr_t<_Tp> = __detail::__unique_ptr_t<Process>]':
os_interface.cpp:126:42:   required from here
  126 |     auto proc = std::make_unique<Process>(g_next_pid, name);
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
C:/mingw64/include/c++/15.1.0/bits/unique_ptr.h:1085:30: error: no matching function for call to 'Process::Process(int&, std::__cxx11::basic_string<char>&)'
 1085 |     { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:/mingw64/include/c++/15.1.0/bits/unique_ptr.h:1085:30: note: there are 2 candidates
In file included from classes/MemoryManager.cpp:4,
                 from os_interface.cpp:12:
classes/process.h:66:5: note: candidate 1: 'Process::Process(int, const std::string&, size_t, size_t)'
   66 |     Process(int id, const std::string& name, size_t mem_size, size_t page_size);
      |     ^~~~~~~
classes/process.h:66:5: note: candidate expects 4 arguments, 2 provided
classes/process.h:65:5: note: candidate 2: 'Process::Process()'
   65 |     Process();
      |     ^~~~~~~
classes/process.h:65:5: note: candidate expects 0 arguments, 2 provided